collectd (5.8.0-1) UNRELEASED; urgency=medium

  * New upstream release. (Closes: #881757, CVE-2017-16820)
  * Enable the grpc plugin, libgrpc++ is now available.
  * Enable the intel_rdt plugin, libpqos is now available.
  * Re-enable the varnish plugin, support for varnish 5.2 now implemented.
  * debian/patches:
    - Added i2c_detection.patch; needed to build against libi2c-4.0. Thanks to
      Christian Ehrhardt fo reporting this problem and Andreas Hasenack for
      providing a patch.
      (Closes: #886920)
    - Added rd_kafka_last_error.patch; needed to build against
      librdkafka-0.11.0. Thanks to Pavel Rochnyack for providing a patch.
    - Removed dpdk-pkg-config.patch; included upstream.
    - Removed libcollectdclient_error_buffer.patch; inclued upstream.
    - Removed local-msr-index-h.patch; included upstream.
    - Removed write_mongodb.patch; included upstream.

 -- Marc Fournier <marc@bl.uem.li>  Wed, 21 Feb 2018 07:02:01 +0100

collectd (5.7.2-2) unstable; urgency=medium

  [ Luca Boccassi ]
  * debian/patches:
    - Add dpdk-pkg-config.patch: Backport upstream patch to build DPDK with
      pkg-config. This allows DPDK in Debian to fix an upstream multi-arch
      issue, where arch-dependents headers are installed in /usr/include
      breaking multi-arch co-installability of libdpdk-dev. (Closes: #872482)

  [ Sebastian Harl ]
  * Disable the sigrok plugin for now; it's not compatible with libsigrok4;
    thanks to Adrian Bunk for reporting this (Closes: #878348).
  * Enable the write_mongodb plugin, libmongoc is now available. Thanks to
    Saikrishna Arcot for reporting this (Closes: #858315).
    - Add write_mongodb.patch to update the plugin to the most recent upstream
      version to bring it up to date with Debian's libmongoc and fix some
      other issues.
  * Update to standards-version 4.1.1:
    - Build depend on debhelper (>= 9.20160709~) instead of dh-systemd.