@@ -133,7 +133,6 @@ LoadPlugin irq
 #LoadPlugin java
 LoadPlugin load
 #LoadPlugin lua
-#LoadPlugin lvm
 #LoadPlugin madwifi
 #LoadPlugin mbmon
 #LoadPlugin md
