@@ -28,7 +28,6 @@ Build-Depends: debhelper (>= 9.20160709~), dpkg-dev (>= 1.14.10), po-debconf, dh
  libkvm-dev [kfreebsd-any],
  libldap2-dev,
  liblua5.3-dev,
- liblvm2-dev [linux-any],
  libmemcached-dev,
  libmicrohttpd-dev,
  libmodbus-dev,
@@ -154,7 +153,6 @@ Description: statistics collection and monitoring daemon (core system)
    * logging to files, STDOUT and STDERR: logfile
    * logging in logstash's JSON event format: log_logstash
    * embedded Lua interpreter: lua
-   * Logical Volume Manager usage: lvm
    * Atheros wireless LAN chipset statistics: madwifi
    * motherboard monitor: mbmon
    * query and parse data from a memcache daemon: memcachec
