@@ -4,6 +4,7 @@ collectd (5.8.0-1) UNRELEASED; urgency=medium
   * Enable the grpc plugin, libgrpc++ is now available.
   * Enable the intel_rdt plugin, libpqos is now available.
   * Re-enable the varnish plugin, support for varnish 5.2 now implemented.
+  * Disable the lvm plugin, liblvm2app being deprecated. (Closes: #881641)
   * debian/patches:
     - Added i2c_detection.patch; needed to build against libi2c-4.0. Thanks to
       Christian Ehrhardt fo reporting this problem and Andreas Hasenack for
